<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:src="@drawable/rounded_all_square_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/mb_plex_sans_regular"
        android:text="@string/default_time"
        android:textColor="@color/black"
        android:textSize="57sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.466" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.531"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="79dp"

        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.491"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewPM1"
        android:layout_width="32dp"
        android:layout_height="37dp"
        android:src="@drawable/rounded_square_pm_am"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.965"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:layout_marginBottom="540dp"
        android:fontFamily="@font/mb_plex_sans_medium"
        android:text="@string/am"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="@+id/imageView5"

        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints" />

    <!-- Componete de hora 2    -->


    <TextView
        android:id="@+id/textViewPM1"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mb_plex_sans_medium"
        android:text="@string/pm"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewB"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:src="@drawable/rounded_all_square_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mb_plex_sans_regular"
        android:text="@string/default_time"
        android:textColor="@color/black"
        android:textSize="57sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewB"
        app:layout_constraintEnd_toEndOf="@+id/imageViewB"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@+id/imageViewB"
        app:layout_constraintTop_toTopOf="@+id/imageViewB"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5B"
        android:layout_width="35dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewB"
        app:layout_constraintEnd_toEndOf="@+id/imageViewB"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="@+id/imageViewB"
        app:layout_constraintTop_toTopOf="@+id/imageViewB"
        app:layout_constraintVertical_bias="0.475"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewPM1B"
        android:layout_width="32dp"
        android:layout_height="37dp"
        android:src="@drawable/rounded_square_pm_am"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5B"
        app:layout_constraintEnd_toEndOf="@+id/imageView5B"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/imageView5B"
        app:layout_constraintTop_toBottomOf="@+id/textView5B"
        app:layout_constraintVertical_bias="0.965"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5B"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:fontFamily="@font/mb_plex_sans_medium"
        android:text="@string/am"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5B"
        app:layout_constraintEnd_toEndOf="@+id/imageView5B"
        app:layout_constraintStart_toStartOf="@+id/imageView5B"
        app:layout_constraintTop_toTopOf="@+id/imageView5B"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPM1B"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:fontFamily="@font/mb_plex_sans_medium"
        android:text="@string/pm"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPM1B"
        app:layout_constraintEnd_toEndOf="@+id/imageView5B"
        app:layout_constraintStart_toStartOf="@+id/imageView5B"
        app:layout_constraintTop_toTopOf="@+id/imageViewPM1B"
        tools:ignore="MissingConstraints" />


    <!-- Componete de hora 2    -->


    <Switch
        android:id="@+id/switch3B"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text=""

        app:layout_constraintBottom_toBottomOf="@+id/imageViewB"
        app:layout_constraintEnd_toEndOf="@+id/imageViewB"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/imageView5B"
        app:layout_constraintTop_toTopOf="@+id/imageViewB"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:foreground="@color/primary"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tool_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/mb_plex_sans_regular"
        android:text="AlarmFit"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.2"
            android:background="@drawable/rounded_button_background" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/electric_bolt"
            android:layout_gravity="center" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>